retrieveOutputPkg/objects/Internet__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <inlineHelpText>Account Number should not be less than 5 digits.</inlineHelpText>
        <label>Account Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_it_useful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is it useful?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Internet__c</fullName>
        <label>Type of Internet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1G</fullName>
                </value>
                <value>
                    <fullName>2G</fullName>
                </value>
                <value>
                    <fullName>3G</fullName>
                </value>
                <value>
                    <fullName>4G</fullName>
                </value>
                <value>
                    <fullName>5G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Internet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Internet_Lists</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Is_it_useful__c</columns>
        <columns>Type_of_Internet__c</columns>
        <filterScope>Everything</filterScope>
        <label>Internet Lists</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Internet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Number_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Account_Number__c)</errorConditionFormula>
        <errorMessage>Account Number should not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Number_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Account_Number__c &lt; 0,
Account_Number__c &gt; 100000)</errorConditionFormula>
        <errorDisplayField>Account_Number__c</errorDisplayField>
        <errorMessage>Account Number should be entered up to 5 digits.</errorMessage>
    </validationRules>
</CustomObject>